# geni_pipeline

./: .env  main.py  pyproject.toml  requirements.txt
.virtual_documents/0-DataIngestParsing/: bank_statement.ipynb
.virtual_documents/enbd/: financial_statement_analysis.ipynb
.virtual_documents/whoop/: whoop_openAI.ipynb
0-DataIngestParsing/: 1-dataingestion.ipynb  2-dataparsingpdf.ipynb  3-dataparsingdoc.ipynb  4-csvexcelparsing.ipynb  5-jsonparsing.ipynb  6-databaseparsing.ipynb  Whoop_band.ipynb  bank_statement (1).ipynb  bank_statement.ipynb  data_ingestion.ipynb
0-DataIngestParsing/.ipynb_checkpoints/: bank_statement-checkpoint.ipynb
0-DataIngestParsing/data/csv/: physiological_cycles_today (1).xls  workouts_today.xls
0-DataIngestParsing/data/databases/: company.db
0-DataIngestParsing/data/structured_files/: inventory.xlsx
0-DataIngestParsing/vector stores/: 1-chromadb.ipynb  2-faiss.ipynb
0-DataIngestParsing/vector stores/chroma_db/: chroma.sqlite3
1-VectorEmbeddingAndDatabases/: embedding.ipynb  openaiembeddings.ipynb
enbd/: financial_flask_genai.py  financial_flask_genai_2.py  financial_statement_analysis.ipynb  financial_statement_flask.py
enbd/.ipynb_checkpoints/: financial_statement_flask-checkpoint.py
whoop/: whoop_band_flask.py  whoop_flask_genai.py  whoop_flask_genai_2.py  whoop_flassk_genai_3.py  whoop_openAI.ipynb
